<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.intentfilters.AlternateActivity">

    <TextView android:text="@string/alternate_activity_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:id="@+id/textView1"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/alternate_activity_button" />

    <DigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/digitalClock"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textSize="@android:dimen/app_icon_size"
        android:background="#ff8ffffd"
        android:typeface="monospace"
        />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
            android:hint="@string/edit_text_hint"
        android:inputType="numberDecimal"
        android:layout_below="@+id/digitalClock"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_marginTop="73dp">
    <requestFocus />
    </EditText>
    <Button
        android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText1"
    android:layout_centerHorizontal="true"
        android:text="@string/timer_button_label"  />
</RelativeLayout>
